kubernetes/ocp-mgmt/applications/anythingllm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anythingllm
spec:
  selector:
    app: anythingllm
  ports:
    - name: http
      port: 8888
      targetPort: http
