kubernetes/ocp-mgmt/applications/anythingllm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anythingllm
  annotations:
    haproxy.router.openshift.io/timeout: 10m
spec:
  host: anythingllm.apps.ocp-mgmt.rh-lab.morey.tech
  to:
    kind: Service
    name: anythingllm
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
